# tree-compression

./: CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: benchmarks.yml
benchmark/: CMakeLists.txt  insert.cpp  read.cpp
dependencies/: CMakeLists.txt
dev/bench/: data.js
include/valla/: declarations.hpp  delta_tree_compression.hpp  indexed_hash_set.hpp  root.hpp  tree_compression.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  tree_compression.cpp
tests/unit/: CMakeLists.txt  delta_tree_compression.cpp  tree_compression.cpp
